Bootstrap icon size changed

--- a/index.html
+++ b/index.html
@@ -202,11 +202,7 @@
                             <li><i class="bi bi-house-door"></i>Avenida San Lorenzo 1234, Cordoba, Argentina</li>
                             <li><i class="bi bi-telephone-fill"></i>+54 0303 222222</li>
                             <li><i class="bi bi-envelope"></i>mieleslupita@gmail.com</li>
-                            <li>
-                                <div class="rrss">
-                                    <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a>
-                                    <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a>
-                                </div>
+                            <li>Redes Sociales: <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a> <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a>
                             </li>
                         </ul>
                     </div>
