--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -105,7 +105,7 @@
         </section>
 
     </main>
-    <!-- Footer-->
+    <!-- Footer -->
     <footer class="footer bg-dark text-white pt-2 mt-5">
         <div class="container">
             <div class="row">
@@ -123,11 +123,7 @@
                         <li><i class="bi bi-house-door"></i>Avenida San Lorenzo 1234, Cordoba, Argentina</li>
                         <li><i class="bi bi-telephone-fill"></i>+54 0303 222222</li>
                         <li><i class="bi bi-envelope"></i>mieleslupita@gmail.com</li>
-                        <li>
-                            <div class="rrss">
-                                <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a>
-                                <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a>
-                            </div>
+                        <li>Redes Sociales: <a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook"></i></a> <a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -139,6 +135,8 @@
             </div>
         </div>
     </footer>
+
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
