--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="pages/contacto.html">Contacto</a>
                             </li>
+                            <li>
+                                <a class="nav-link" href="#"><i class="bi bi-person-fill"></i></a>
+                            </li>
+                            <li>
+                                <a class="nav-link" href="#"><i class="bi bi-cart"></i></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
