--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -41,6 +41,12 @@
                         <li class="nav-item">
                             <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
+                        <li>
+                            <a class="nav-link" href="#"><i class="bi bi-person-fill"></i></a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#"><i class="bi bi-cart"></i></a>
+                        </li>
                     </ul>
                 </div>
             </div>
