Reworked cards button and price tag

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -90,42 +90,48 @@
                     <div class="card align-items-center">
                         <h5 class="card-title">Miel de Eucalipto</h5>
                         <img class="card-img-top" src="../public/miel_eucaliptus.jpg" alt="Imagen de Miel de Eucalipto.">
-                        <a href="#" class="btn btn-primary">$</a>
+                        <p>$99</p>
+                        <a href="#" class="btn btn-primary">Agregar al carro</a>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card align-items-center ">
                         <h5 class="card-title">Miel de Algarrobo</h5>
-                        <img class="card-img-top" src="../public/miel_algarrobo.jpg" alt="Imagen de miel de algarrobo."">
-                        <a href="#" class="btn btn-primary">$</a>
+                        <img class="card-img-top" src="../public/miel_algarrobo.jpg" alt="Imagen de miel de algarrobo.">
+                        <p>$99</p>
+                        <a href="#" class="btn btn-primary">Agregar al carro</a>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card align-items-center">
                         <h5 class="card-title">Miel de Citrus</h5>
                         <img class="card-img-top" src="../public/miel_eucaliptus.jpg" alt="Imagen de miel de citrus.">
-                        <a href="#" class="btn btn-primary">$</a>
+                        <p>$99</p>
+                        <a href="#" class="btn btn-primary">Agregar al carro</a>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card align-items-center">
                         <h5 class="card-title">Miel de Girasol</h5>
                         <img class="card-img-top" src="../public/miel_algarrobo.jpg" alt="Imagen de miel de girasol.">
-                        <a href="#" class="btn btn-primary">$</a>
+                        <p>$99</p>
+                        <a href="#" class="btn btn-primary">Agregar al carro</a>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card align-items-center">
                         <h5 class="card-title">Polen de Abeja</h5>
                         <img class="card-img-top" src="../public/polen.jpg" alt="Imagen de polen de abejas.">
-                        <a href="#" class="btn btn-primary">$</a>
+                        <p>$99</p>
+                        <a href="#" class="btn btn-primary">Agregar al carro</a>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card align-items-center">
                         <h5 class="card-title">Propoleo</h5>
                         <img class="card-img-top" src="../public/propoleo.jpg" alt="Imagen de propoleo.">
-                        <a href="#" class="btn btn-primary">$</a>
+                        <p>$99</p>
+                        <a href="#" class="btn btn-primary">Agregar al carro</a>
                     </div>
                 </div>
             </div>
