--- a/index.html
+++ b/index.html
@@ -77,21 +77,24 @@
                         <div class="card align-items-center">
                             <h5 class="card-title">Miel de Eucalipto</h5>
                             <img class="card-img-top " src="public/miel_eucaliptus.jpg" alt="Imagen de Miel de Eucalipto.">
-                            <a href="#" class="btn btn-primary">$</a>
+                            <p>$99</p>
+                            <a href="#" class="btn btn-primary">Agregar al carro</a>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card align-items-center">
                             <h5 class="card-title">Miel de Algarrobo</h5>
-                            <img class="card-img-top " src="public/miel_algarrobo.jpg" alt="Imagen de miel de algarrobo."">
-                            <a href="#" class="btn btn-primary">$</a>
+                            <img class="card-img-top " src="public/miel_algarrobo.jpg" alt="Imagen de miel de algarrobo.">
+                            <p>$99</p>
+                            <a href="#" class="btn btn-primary">Agregar al carro</a>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card align-items-center">
                             <h5 class="card-title">Miel de Citrus</h5>
                             <img class="card-img-top " src="public/miel_eucaliptus.jpg" alt="Imagen de miel de citrus.">
-                            <a href="#" class="btn btn-primary">$</a>
+                            <p>$99</p>
+                            <a href="#" class="btn btn-primary">Agregar al carro</a>
                         </div>
                     </div>
                 </div>
