--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                 </div>
                                 <div class="item-txt">
                                     <h5>Cliente Uno</h5>
-                                    <blockquote>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi rerum ratione ad, eaque doloremque ut dolorem hic consequatur placeat rem quis possimus nisi dolores saepe iusto tempora harum tenetur et?</blockquote>
+                                    <blockquote>Excelente atencion. La variedad de productos me sorprendio, asi como su calidad. El delivery tardo lo acordado.</blockquote>
                                 </div>
                             </div>
                         </div>
@@ -160,7 +160,7 @@
                                 </div>
                                 <div class="item-txt">
                                     <h5>Cliente Dos</h5>
-                                    <blockquote>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi rerum ratione ad, eaque doloremque ut dolorem hic consequatur placeat rem quis possimus nisi dolores saepe iusto tempora harum tenetur et?</blockquote>
+                                    <blockquote>Tienen los mejores precios. Llevo años comprando aqui y la unica vez que tuve un problema me cambiaron el producto en el acto, recomendado.</blockquote>
                                 </div>
                             </div>
                         </div>
@@ -171,7 +171,7 @@
                                 </div>
                                 <div class="item-txt">
                                     <h5>Cliente Tres</h5>
-                                    <blockquote>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi rerum ratione ad, eaque doloremque ut dolorem hic consequatur placeat rem quis possimus nisi dolores saepe iusto tempora harum tenetur et?</blockquote>
+                                    <blockquote>Muy atentos. Necesite trasladar gran cantidad de material apicola y todo fue solucionado en cuestion de horas.</blockquote>
                                 </div>
                             </div>
                         </div>
