--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -58,7 +58,9 @@
             <div class="parallax imgBackgroundOne">
                 <h2 class="textoSobreImagen">Conocenos</h2>
             </div>
-            <p class="texto textoConocenos">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique, iure nostrum tempore debitis minima ab distinctio illum repellat laudantium quas, nihil repellendus dignissimos veritatis harum incidunt, optio enim porro placeat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident illum corporis adipisci unde, perspiciatis error, delectus at non reiciendis quibusdam maiores quae perferendis? Vitae molestias tempora eos deserunt eius ea. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta perferendis ipsum consequatur ipsa, impedit amet quasi accusantium voluptate nemo voluptatem.</p>
+            <p class="texto textoConocenos">Luego de trabajar por 20 años en la industria agropecuaria, los fundadores Gabriel Pepper y Javier Carriado aprendimos lo necesario para mantener un esquema productivo que cumpla las exigencias del mercado actual. Desde el año 2002 nos encargamos de la produccion, distribucion y venta de miel en toda la provincia de La Pampa.<br>
+            Con la experiencia adquirida, comenzamos a proveer material apicola en todo el pais, desde indumentaria para el pequeño productor hasta maquinaria para grandes empresas.
+            </p>
         </section>
         <section class="comunidadesAmigas d-flex justify-content-center">
             <!-- Offcanvas Menu -->
@@ -76,7 +78,7 @@
                         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
-                        <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum vero expedita quos voluptas praesentium vel! Eos repellendus.</div>
+                        <div>A traves de los años, fuimos conociendo grandes entusiastas de la apicultura que comparten nuestra pasion. No podemos hacer menos que recomendar sus productos y servicios.</div>
                         <ul class="nav flex-column ">
                             <li class="nav-item">
                                 <a class="nav-link text-dark"href="#">Abejas Argentinas</a>
@@ -99,13 +101,13 @@
                 <h2 class="textoSobreImagen">Premios y Reconocimientos</h2>
             </div>
             <div class="texto textoPremios">
-                <p class="texto textoPremios">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias hic unde nulla, eaque voluptates officiis at facere, adipisci exercitationem asperiores blanditiis illum consequatur.</p>
+                <p class="texto textoPremios">Con la llegada de Julien Valk a la empresa, nos propusimos lograr la mejor miel de la region, compitiendo en los eventos mas prestigiosos. Nuestra busqueda por la excelencia nos obliga a competir no solo con el resto del mercado, sino con nosotros mismos.</p>
                 <h4>Premios:</h4>
                 <ul class="texto listaPremios">
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                    <li>Premio a la tendencia gastronomica, 2009.</li>
+                    <li>Reconocimiento a las empresas mas productivas, 2016.</li>
+                    <li>Productores apicultores en Pilar, 2018.</li>
+                    <li>Premios al sabor argentino, 2020.</li>
                 </ul>
             </div>
         </section>
