--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -52,58 +52,60 @@
             </div>
         </nav> 
     </header>
-    <!-- Main Section. Historia de la empresa + Premios obtenidos -->
+
+    <!-- Main Section. Historia de la empresa + Comunidades Amigas +  Premios obtenidos -->
     <main>
         <section class="historia"> 
             <div class="parallax imgBackgroundOne">
                 <h2 class="textoSobreImagen">Conocenos</h2>
             </div>
-            <p class="texto textoConocenos">Luego de trabajar por 20 años en la industria agropecuaria, los fundadores Gabriel Pepper y Javier Carriado aprendimos lo necesario para mantener un esquema productivo que cumpla las exigencias del mercado actual. Desde el año 2002 nos encargamos de la produccion, distribucion y venta de miel en toda la provincia de La Pampa.<br>
+            <p class="textoConocenos">Luego de trabajar por 20 años en la industria agropecuaria, los fundadores Gabriel Pepper y Javier Carriado aprendimos lo necesario para mantener un esquema productivo que cumpla las exigencias del mercado actual. Desde el año 2002 nos encargamos de la produccion, distribucion y venta de miel en toda la provincia de La Pampa.<br>
             Con la experiencia adquirida, comenzamos a proveer material apicola en todo el pais, desde indumentaria para el pequeño productor hasta maquinaria para grandes empresas.
             </p>
         </section>
         <section class="comunidadesAmigas d-flex justify-content-center">
+
             <!-- Offcanvas Menu -->
             <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvas" aria-labelledby="offCanvasLabel">
                 <div class="offcanvas-header">
-                    <h5 class="offcanvas-title">
-                        Comunidades Amigas:
-                    </h5>
+                    <h5 class="offcanvas-title">Comunidades Amigas:</h5>
                 </div>
             </div>
-                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#comunidadesAmigas" aria-controls="offcanvasExample">Conoce nuestras comunidades amigas</button>
-                <div class="offcanvas offcanvas-start" tabindex="-1" id="comunidadesAmigas" aria-labelledby="offcanvasComunidadesAmigasLabel">
-                    <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasComunidadesAmigasLabel">Comunidades Amigas</h5>
-                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                    </div>
-                    <div class="offcanvas-body">
-                        <div>A traves de los años, fuimos conociendo grandes entusiastas de la apicultura que comparten nuestra pasion. No podemos hacer menos que recomendar sus productos y servicios.</div>
-                        <ul class="nav flex-column ">
-                            <li class="nav-item">
-                                <a class="nav-link text-dark"href="#">Abejas Argentinas</a>
-                                <img src="../public/comunidad1.jpeg" alt="Logo comunidad Abejas Argentinas.">
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" href="#">Comida y Salud</a>
-                                <img src="../public/comunidad2.jpeg" alt="Logo comunidad comida y salud.">
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" href="#">Comunidad Nature</a>
-                                <img src="../public/comunidad3.jpeg" alt="Logo comunidad Nature.">
-                            </li>
-                        </ul>
-                    </div>
+            <button class="btn btn-primary m-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#comunidadesAmigas" aria-controls="offcanvasExample">Conoce nuestras comunidades amigas</button>
+            <div class="offcanvas offcanvas-start" tabindex="-1" id="comunidadesAmigas" aria-labelledby="offcanvasComunidadesAmigasLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasComunidadesAmigasLabel">Comunidades Amigas</h5>
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
-            </section>
+                <div class="offcanvas-body">
+                    <div>A traves de los años, fuimos conociendo grandes entusiastas de la apicultura que comparten nuestra pasion. No podemos hacer menos que recomendar sus productos y servicios.</div>
+                    <ul class="nav flex-column ">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark"href="#">Abejas Argentinas</a>
+                            <img src="../public/comunidad1.jpeg" alt="Logo comunidad Abejas Argentinas.">
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#">Comida y Salud</a>
+                            <img src="../public/comunidad2.jpeg" alt="Logo comunidad comida y salud.">
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#">Comunidad Nature</a>
+                            <img src="../public/comunidad3.jpeg" alt="Logo comunidad Nature.">
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- Premios -->
         <section class="premios">   
             <div class="parallax imgBackgroundTwo">
                 <h2 class="textoSobreImagen">Premios y Reconocimientos</h2>
             </div>
-            <div class="texto textoPremios">
-                <p class="texto textoPremios">Con la llegada de Julien Valk a la empresa, nos propusimos lograr la mejor miel de la region, compitiendo en los eventos mas prestigiosos. Nuestra busqueda por la excelencia nos obliga a competir no solo con el resto del mercado, sino con nosotros mismos.</p>
+            <div class="textoPremios">
+                <p>Con la llegada de Julien Valk a la empresa, nos propusimos lograr la mejor miel de la region, compitiendo en los eventos mas prestigiosos. Nuestra busqueda por la excelencia nos obliga a competir no solo con el resto del mercado, sino con nosotros mismos.</p>
                 <h4>Premios:</h4>
-                <ul class="texto listaPremios">
+                <ul class="listaPremios">
                     <li>Premio a la tendencia gastronomica, 2009.</li>
                     <li>Reconocimiento a las empresas mas productivas, 2016.</li>
                     <li>Productores apicultores en Pilar, 2018.</li>
