--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -52,6 +52,7 @@
             </div>
         </nav> 
     </header>
+
     <!-- Main Section. Formulario de Contacto + Direcciones y Google Maps -->
     <main class="contacto_main">
         <section class="infoContacto">
@@ -71,6 +72,8 @@
                     <li>Domingo: Cerrado</li>
                 </ul>
         </section>
+
+        <!-- Formulario. Floating Labels -->
         <section class="formulario container">
             <form class="bg-dark text-light p-3 mt-5 rounded">
                 <h2>Contacto</h2>
@@ -92,9 +95,9 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
-
-
         </section>
+        
+        <!-- Google Maps -->
         <div class="ratio ratio-16x9 googleMap">
             <iframe class="" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2024.8140348847041!2d-64.18469861054419!3d-31.405371068045167!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sar!4v1649367148693!5m2!1sen!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
