--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -52,12 +52,14 @@
             </div>
         </nav> 
     </header>
-    <!-- Main Section. Descripcion de Servicios + Lista de Servicios -->
+
+    <!-- Main Section. Descripcion de Servicios + Lista de Servicios + Preguntas Frecuentes-->
     <main>
         <section class="serviciosDescripcion">
             <h2>Servicios</h2>
             <p>Gracias a mas de cuatro decadas de experiencia en el mundo agropecuario, contamos con las herramientas necesarias para ayudarte en tu negocio, o capacitarte para que puedas empezarlo. Esperamos tu consulta!</p>
         </section>
+        
         <!-- Grid con Servicios Bootstrap -->
         <section class="container-fluid">
             <div class="row g-3 row-cols-auto justify-content-center">
@@ -90,6 +92,7 @@
                 </div>
             </div>
         </section>
+
         <!-- Preguntas Frecuentes FAQ sobre tutorias -->
         <section class="container-fluid justify-content-center accordion accordion-flush pt-3" id="accordionFAQ">
             <h5 class="text-center">Cursos y Tutorias: Preguntas Frecuentes</h5>
