--- a/pages/productos.html
+++ b/pages/productos.html
@@ -52,6 +52,7 @@
             </div>
         </nav> 
     </header>
+
     <!-- Main Section -->
     <main class="productos_main">
         <!-- Sidebar con filtro de Productos -->
@@ -81,9 +82,9 @@
                 <div>
             </nav>
         </section>
-        <!-- Grid Productos Bootstrap -->
-        <section class="container-fluid">
 
+        <!-- Grid Productos -->
+        <section class="container-fluid">
             <h2 class="text-center">Productos</h2>
             <div class="row g-3 row-cols-auto justify-content-center"> 
                 <div class="col">
