--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
                 <div class="container">
                     <!-- Logo -->
-                    <a class="navbar-brand" href="index.html" ><img id="logo" src="public/logo-final2.png" alt="Logo empresa"></a>
+                    <a class="navbar-brand shake" href="index.html" ><img id="logo" src="public/logo-final2.png" alt="Logo empresa"></a>
                     <!-- Hamburguer Menu -->
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -59,12 +59,12 @@
             <!-- Hero Section -->
             <section class="heroSection container mt-3">
                 <div class="row">
-                    <div class="heroSection--txt col-12 col-md-5 rounded">
+                    <div class="heroSection--txt col-12 col-md-5 rounded fadeInTop">
                         <h1>Mieles Lupita</h1>
                         <h2>Miel Natural de Abejas</h2>
                         <p>Encontra toda la variedad de productos de calidad que necesitas en nuestra tienda online. Tambien ofrecemos servicios de primer nivel para tu emprendimiento y nos aseguramos que recibas atencion personalizada en todo momento.</p>
                     </div>
-                    <div class="heroSection--img col-12 col-md-7">
+                    <div class="heroSection--img col-12 col-md-7 fadeInBottom">
                         <img  src="public/apicultor.jpg" alt="Imagen de un apicultor.">
                     </div>
                 </div>
