Remade buttons colors

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -93,7 +93,7 @@
                     <input type="checkbox" class="form-check-input" id="subscribe">
                     <label class="form-check-label" for="subscribe">Subscribirme al Newsletter</label>
                 </div>
-                <button type="submit" class="btn btn-primary">Enviar</button>
+                <button type="submit" class="btn btn-success">Enviar</button>
             </form>
         </section>
         
