--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="form-floating text-dark mb-4 d-flex flex-row">
                         <input type="email" class="form-control" placeholder="@">
                         <label for="floatingInput">Email</label>
-                        <button type="submit" class="btn btn-primary">Enviar</button>
+                        <button type="submit" class="btn btn-success">Enviar</button>
                     </div>
                     
                 </div>
