--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
 
         <!-- Footer-->
         <footer class="bg-dark text-white pt-2">
-            <div class="container">
+            <div class="container text-center">
                 <div class="row">
-                    <div class="col-12 col-md-6 text-left">
+                    <div class="col-12 col-md-6">
                         <h5 class="text-uppercase font-weight-bold text-warning">Links Utiles</h5>
                         <ul class="text-white">
                             <li> <a href="#">Delivery</a></li>
