Text fonts, sizes

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             <!-- Hero Section -->
             <section class="heroSection container">
                 <div class="row">
-                    <div class="heroSection--txt col-12 col-md-5 rounded fadeInTop">
+                    <div class="heroSection--txt col-12 col-md-5 rounded fadeInTop p-3">
                         <h1>Mieles Lupita</h1>
-                        <h2>Miel Natural de Abejas</h2>
+                        <h5>Miel Natural de Abejas</h5>
                         <p>Encontra toda la variedad de productos de calidad que necesitas en nuestra tienda online. Tambien ofrecemos servicios de primer nivel para tu emprendimiento y nos aseguramos que recibas atencion personalizada en todo momento.</p>
                     </div>
                     <div class="heroSection--img col-12 col-md-7 fadeInBottom">
@@ -104,7 +104,7 @@
             <!-- Newsletter-->
             <form class="newsletter container text-center" action="">
                 <div class="container-fluid d-flex flex-column align-items-center">
-                    <h5 class="">Subscribete para recibir ofertas y novedades</h5>
+                    <h2>Subscribete para recibir ofertas y novedades</h2>
                     <div class="form-floating text-dark mb-4 d-flex flex-row">
                         <input type="email" class="form-control" placeholder="@">
                         <label for="floatingInput">Email</label>
@@ -116,7 +116,7 @@
 
             <!-- Clases apicultura -->
             <section class="tutorias">
-                <h5 class="text-center">Sumate a nuestros cursos de apicultura!</h5>
+                <h2 class="text-center">Sumate a nuestros cursos de apicultura!</h2>
                 <div class="ratio ratio-16x9">
                     <iframe src="https://www.youtube.com/embed/apCLQgCqeec" title="YouTube video" allowfullscreen></iframe>
                 </div>
@@ -127,15 +127,15 @@
                 <div id="carouselNegocios" class="carousel carousel-dark slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="2000">
-                            <img src="public/empresas.png" class="d-block w-100" alt="">
+                            <img src="public/empresas.png" class="d-block w-100 mt-4" alt="">
                             <div class="carousel-caption d-md-block">
-                                <h5>Donde encontrarnos:</h5>
+                                <h3>Encontranos en:</h3>
                             </div>
                         </div>
                         <div class="carousel-item" data-bs-interval="2000">
-                            <img src="public/proveedores.png" class="d-block w-100" alt="">
+                            <img src="public/proveedores.png" class="d-block w-100 mt-4" alt="">
                             <div class="carousel-caption d-md-block">
-                                <h5>Nuestros clientes:</h5>
+                                <h3>Nuestros clientes:</h3>
                             </div>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
             </section>
 
             <section class="testimonios mt-5">
-                <h5 class="text-center">Testimonios</h5>
+                <h3 class="text-center">Testimonios</h3>
     
                 <div id="carouselTestimonios" class="carousel carousel-dark slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
@@ -222,7 +222,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <h5>Copyright &copy; 2022 Mieles Lupita</h5>
+                        <h6>Copyright &copy; 2022 Mieles Lupita</h6>
                     </div>
                 </div>
             </div>
