--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -56,7 +56,7 @@
 
         <!-- Main Section. Descripcion de Servicios + Lista de Servicios + Preguntas Frecuentes-->
         <main>
-            <section class="serviciosDescripcion">
+            <section class="serviciosDescripcion p-3">
                 <h2>Servicios</h2>
                 <p>Gracias a mas de cuatro decadas de experiencia en el mundo agropecuario, contamos con las herramientas necesarias para ayudarte en tu negocio, o capacitarte para que puedas empezarlo. Esperamos tu consulta!</p>
             </section>
@@ -96,7 +96,7 @@
 
             <!-- Preguntas Frecuentes FAQ sobre tutorias -->
             <section class="container-fluid justify-content-center accordion accordion-flush pt-3" id="accordionFAQ">
-                <h5 class="text-center">Cursos y Tutorias: Preguntas Frecuentes</h5>
+                <h2 class="text-center">Cursos y Tutorias: Preguntas Frecuentes</h2>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingOne">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
