--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -130,7 +130,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <h5>Copyright &copy; 2022 Mieles Lupita</h5>
+                        <h6 class="copy">Copyright &copy; 2022 Mieles Lupita</h6>
                     </div>
                 </div>
             </div>
