--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
         <main class="index_main">
 
             <!-- Hero Section -->
-            <section class="heroSection container">
-                <div class="row">
-                    <div class="heroSection--txt col-12 col-md-5 rounded fadeInTop p-3">
+            <section class="heroSection">
+                <div class="hero--txtBackground">
+                    <div class="heroSection--txt fadeInTop">
                         <h1>Mieles Lupita</h1>
-                        <h5>Miel Natural de Abejas</h5>
-                        <p>Encontra toda la variedad de productos de calidad que necesitas en nuestra tienda online. Tambien ofrecemos servicios de primer nivel para tu emprendimiento y nos aseguramos que recibas atencion personalizada en todo momento.</p>
+                        <p>Encontra toda la variedad de productos de calidad que necesitas en nuestra tienda. Tambien ofrecemos servicios de primer nivel para tu emprendimiento y nos aseguramos que recibas atencion personalizada en todo momento.</p>
+                        <button type="submit" class="btn btn-primary shake">Catalogo</button>
                     </div>
-                    <div class="heroSection--img col-12 col-md-7 fadeInBottom">
-                        <img  src="public/apicultor.jpg" alt="Imagen de un apicultor.">
-                    </div>
+                    
                 </div>
+                
+
             </section>
 
             <!-- Productos Destacados Seccion -->
