Navbar transparent in index (hero section)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="main-wrapper">
         <!-- Header (logo + barra de navegacion) -->
-        <header>
+        <header class="header-index">
             <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
                 <div class="container">
                     <!-- Logo -->
@@ -62,7 +62,7 @@
                     <div class="heroSection--txt fadeInTop">
                         <h1>Mieles Lupita</h1>
                         <p>Encontra toda la variedad de productos de calidad que necesitas en nuestra tienda. Tambien ofrecemos servicios de primer nivel para tu emprendimiento y nos aseguramos que recibas atencion personalizada en todo momento.</p>
-                        <button type="submit" class="btn btn-primary shake">Catalogo</button>
+                        <a href="pages/productos.html"><button type="submit" class="btn btn-primary shake">Catalogo</button></a>
                     </div>
                     
                 </div>
