--- a/index.html
+++ b/index.html
@@ -64,9 +64,14 @@
                         <p>Encontra toda la variedad de productos de calidad que necesitas en nuestra tienda. Tambien ofrecemos servicios de primer nivel para tu emprendimiento y nos aseguramos que recibas atencion personalizada en todo momento.</p>
                         <a href="pages/productos.html"><button type="submit" class="btn btn-primary shake">Catalogo</button></a>
                     </div>
-                    
                 </div>
-                
+                <div class="benefits container-fluid text-center">
+                    <div class="row">
+                        <div class="col-12 col-md-4"><i class="bi bi-truck"></i> Entregas a todo el pais</div>
+                        <div class="col-12 col-md-4"><i class="bi bi-shield-check"></i> Aprobado por SENASA</div>
+                        <div class="col-12 col-md-4"><i class="bi bi-clock"></i> Atendemos las 24 horas</div>
+                    </div>
+                </div>
 
             </section>
 
