Reemplazo de clases de colores por map-get en ciertas ocasiones

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <a href="pages/productos.html"><button type="submit" class="btn btn-primary shake">Catalogo</button></a>
                     </div>
                 </div>
-                <div class="benefits container-fluid text-center">
+                <div class="benefits container-fluid text-center color-bright">
                     <div class="row">
                         <div class="col-12 col-md-4"><i class="bi bi-truck"></i> Entregas a todo el pais</div>
                         <div class="col-12 col-md-4"><i class="bi bi-shield-check"></i> Aprobado por SENASA</div>
@@ -147,7 +147,7 @@
                 </div>
             </section>
 
-            <section class="testimonios mt-5">
+            <section class="testimonios mt-5 color-dark">
                 <h3 class="text-center">Testimonios</h3>
     
                 <div id="carouselTestimonios" class="carousel carousel-dark slide" data-bs-ride="carousel">
