--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -106,7 +106,7 @@
                 <div class="textoConocenos">
                     <p>Con la llegada de Julien Valk a la empresa, nos propusimos lograr la mejor miel de la region, compitiendo en los eventos mas prestigiosos. Nuestra busqueda por la excelencia nos obliga a competir no solo con el resto del mercado, sino con nosotros mismos.</p>
                     <h5>Premios:</h5>
-                    <ul class="listaPremios">
+                    <ul class="listaPremios color-dark">
                         <li>Premio a la tendencia gastronomica, 2009.</li>
                         <li>Reconocimiento a las empresas mas productivas, 2016.</li>
                         <li>Productores apicultores en Pilar, 2018.</li>
