--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -61,7 +61,7 @@
                 <h4>Telefono: +54 0303 222222</h4>
                 <h4>Email: mieleslupita@gmail.com</h4>
             </section>
-            <section class="horariosContacto">
+            <section class="horariosContacto color-dark">
                 <h2>Horarios</h2>
                     <ul>
                         <li>Lunes: 9:00 - 13:00, 15:00 - 19:00</li>
