--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta Keywords -->
+    <meta name="keywords" content="Mieles Lupita, miel, apicultura, apicola, comprar miel, abeja, colmenas.">
+    <!-- Meta Description -->
+    <meta name="description" content="Mieles Lupita: Encontra toda la variedad de productos apicolas que necesitas.">
+    <!-- Favicon -->
+    <link rel="icon" href="public/logo-final2.png">
+
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- My CSS -->
     <link rel="stylesheet" href="css/main.css">
-    <title>Mieles Lupita</title>
+    <title>Mieles Lupita - Inicio</title>
 </head>
 <body>
     <div class="main-wrapper">
