--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="heroSection--txt fadeInTop">
                         <h1>Mieles Lupita</h1>
                         <p>Encontra toda la variedad de productos de calidad que necesitas en nuestra tienda. Tambien ofrecemos servicios de primer nivel para tu emprendimiento y nos aseguramos que recibas atencion personalizada en todo momento.</p>
-                        <a href="pages/productos.html"><button type="submit" class="btn btn-primary shake">Catalogo</button></a>
+                        <a href="pages/productos.html"><button type="submit" class="btn btn-primary shake mt-3">Catalogo</button></a>
                     </div>
                 </div>
                 <div class="benefits container-fluid text-center color-bright">
@@ -116,7 +116,7 @@
             <!-- Newsletter-->
             <form class="newsletter container text-center" action="">
                 <div class="container-fluid d-flex flex-column align-items-center">
-                    <h2>Subscribete para recibir ofertas y novedades</h2>
+                    <h3>Subscribete para recibir ofertas y novedades</h3>
                     <div class="form-floating text-dark mb-4 d-flex flex-row">
                         <input type="email" class="form-control" placeholder="@">
                         <label for="floatingInput">Email</label>
@@ -128,7 +128,7 @@
 
             <!-- Clases apicultura -->
             <section class="tutorias">
-                <h2 class="text-center">Sumate a nuestros cursos de apicultura!</h2>
+                <h3 class="text-center">Sumate a nuestros cursos de apicultura!</h3>
                 <div class="ratio ratio-16x9">
                     <iframe src="https://www.youtube.com/embed/apCLQgCqeec" title="YouTube video" allowfullscreen></iframe>
                 </div>
