--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -9,7 +9,7 @@
     <!-- Meta Description -->
     <meta name="description" content="Mieles Lupita: Encontra toda la variedad de productos apicolas que necesitas. Te asesoramos para que tu negocio despegue lo mas rapido posible. Sumate a nuestros cursos de apicultura.">
     <!-- Favicon -->
-    <link rel="icon" href="../public/logo-final2.png">
+    <link rel="icon" href="../public/favicon.png">
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
