--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -7,7 +7,7 @@
     <!-- Meta Keywords -->
     <meta name="keywords" content="Mieles Lupita, miel, apicultura, apicola, comprar miel, abeja, colmenas, historia empresa, familia, conocenos, premios, comunidades amigas. ">
     <!-- Meta Description -->
-    <meta name="description" content="Mieles Lupita: Encontra toda la variedad de productos apicolas que necesitas. Conoce nuestra historia y nuestros logros.">
+    <meta name="description" content="Mieles Lupita: Somos una empresa oriunda de cordoba cuyo objetivo es brindarte la mejor calidad de bienes y servicios para tu emprendimiento apicola. Tambien ofrecemos la mayor variedad de miel de la region. Encontra en nuestro sitio toda la informacion que necesitas, conoce nuestra historia y nuestros logros.">
     <!-- Favicon -->
     <link rel="icon" href="../public/favicon.ico">
 
