--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,7 @@
     <!-- Meta Keywords -->
     <meta name="keywords" content="Mieles Lupita, miel, apicultura, apicola, comprar miel, colmenas, contacto, direccion, telefono, redes.">
     <!-- Meta Description -->
-    <meta name="description" content="Mieles Lupita: Encontra toda la variedad de productos apicolas que necesitas. Contactanos por cualquier consulta, buscanos en nuestras redes sociales.">
+    <meta name="description" content="Mieles Lupita: Somos una empresa oriunda de cordoba cuyo objetivo es brindarte la mejor calidad de bienes y servicios para tu emprendimiento apicola. Tambien ofrecemos la mayor variedad de miel de la region. Encontra en nuestro sitio toda la informacion que necesitas. Contactanos por cualquier consulta, buscanos en nuestras redes sociales.">
     <!-- Favicon -->
     <link rel="icon" href="../public/favicon.ico">
 
