--- a/pages/productos.html
+++ b/pages/productos.html
@@ -7,7 +7,7 @@
     <!-- Meta Keywords -->
     <meta name="keywords" content="Mieles Lupita, miel, apicultura, apicola, comprar miel, abeja, colmenas, productos, polen, propoleo, ahumador, mameluco, guantes.">
     <!-- Meta Description -->
-    <meta name="description" content="Mieles Lupita: Encontra toda la variedad de productos apicolas que necesitas. Tenemos todos los productos que necesitas.">
+    <meta name="description" content="Mieles Lupita: Somos una empresa oriunda de cordoba cuyo objetivo es brindarte la mejor calidad de bienes y servicios para tu emprendimiento apicola. Tambien ofrecemos la mayor variedad de miel de la region. Encontra en nuestro sitio toda la informacion y todos los productos que necesitas.">
     <!-- Favicon -->
     <link rel="icon" href="../public/favicon.ico">
 
