--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
                 <div class="container">
                     <!-- Logo -->
-                    <a class="navbar-brand shake" href="index.html" ><img id="logo" src="public/logo-final2.png" alt="Logo empresa"></a>
+                    <a class="navbar-brand shake" href="index.html" ><img id="logo" src="public/logo-final.webp" alt="Logo empresa"></a>
                     <!-- Hamburguer Menu -->
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -89,7 +89,7 @@
                     <div class="col">
                         <div class="card align-items-center">
                             <h5 class="card-title">Miel de Eucalipto</h5>
-                            <img class="card-img-top " src="public/miel_eucaliptus.jpg" alt="Imagen de Miel de Eucalipto.">
+                            <img class="card-img-top " src="public/miel_eucaliptus.webp" alt="Imagen de Miel de Eucalipto.">
                             <p>$99</p>
                             <a href="#" class="btn btn-primary">Agregar al carro</a>
                         </div>
@@ -97,7 +97,7 @@
                     <div class="col">
                         <div class="card align-items-center">
                             <h5 class="card-title">Miel de Algarrobo</h5>
-                            <img class="card-img-top " src="public/miel_algarrobo.jpg" alt="Imagen de miel de algarrobo.">
+                            <img class="card-img-top " src="public/miel_algarrobo.webp" alt="Imagen de miel de algarrobo.">
                             <p>$99</p>
                             <a href="#" class="btn btn-primary">Agregar al carro</a>
                         </div>
@@ -105,7 +105,7 @@
                     <div class="col">
                         <div class="card align-items-center">
                             <h5 class="card-title">Miel de Citrus</h5>
-                            <img class="card-img-top " src="public/miel_eucaliptus.jpg" alt="Imagen de miel de citrus.">
+                            <img class="card-img-top " src="public/miel_eucaliptus.webp" alt="Imagen de miel de citrus.">
                             <p>$99</p>
                             <a href="#" class="btn btn-primary">Agregar al carro</a>
                         </div>
@@ -139,13 +139,13 @@
                 <div id="carouselNegocios" class="carousel carousel-dark slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="2000">
-                            <img src="public/empresas.png" class="d-block w-100 mt-4" alt="">
+                            <img src="public/empresas.webp" class="d-block w-100 mt-4" alt="">
                             <div class="carousel-caption d-md-block">
                                 <h3>Encontranos en:</h3>
                             </div>
                         </div>
                         <div class="carousel-item" data-bs-interval="2000">
-                            <img src="public/proveedores.png" class="d-block w-100 mt-4" alt="">
+                            <img src="public/proveedores.webp" class="d-block w-100 mt-4" alt="">
                             <div class="carousel-caption d-md-block">
                                 <h3>Nuestros clientes:</h3>
                             </div>
@@ -162,7 +162,7 @@
                         <div class="carousel-item active" data-bs-interval="10000">
                             <div class="item">
                                 <div class="item-img">
-                                    <img src="public/testimonio-a.jpg" class="d-block w-100" alt="...">
+                                    <img src="public/testimonio-a.webp" class="d-block w-100" alt="...">
                                 </div>
                                 <div class="item-txt">
                                     <h5>Cliente Uno</h5>
@@ -173,7 +173,7 @@
                         <div class="carousel-item" data-bs-interval="10000">
                             <div class="item">
                                 <div class="item-img">
-                                    <img src="public/testimonio-b.jpg" class="d-block w-100" alt="...">
+                                    <img src="public/testimonio-b.webp" class="d-block w-100" alt="...">
                                 </div>
                                 <div class="item-txt">
                                     <h5>Cliente Dos</h5>
@@ -184,7 +184,7 @@
                         <div class="carousel-item" data-bs-interval="10000">
                             <div class="item">
                                 <div class="item-img">
-                                    <img src="public/testimonio-c.jpg" class="d-block w-100" alt="...">
+                                    <img src="public/testimonio-c.webp" class="d-block w-100" alt="...">
                                 </div>
                                 <div class="item-txt">
                                     <h5>Cliente Tres</h5>
