--- a/pages/conocenos.html
+++ b/pages/conocenos.html
@@ -26,7 +26,7 @@
             <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
                 <div class="container">
                     <!-- Logo -->
-                    <a class="navbar-brand shake" href="../index.html" ><img id="logo" src="../public/logo-final2.png" alt="Logo empresa"></a>
+                    <a class="navbar-brand shake" href="../index.html" ><img id="logo" src="../public/logo-final.webp" alt="Logo empresa"></a>
                     <!-- Hamburguer Menu -->
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -90,15 +90,15 @@
                         <ul class="nav flex-column ">
                             <li class="nav-item">
                                 <a class="nav-link text-dark"href="#">Abejas Argentinas</a>
-                                <img src="../public/comunidad1.jpeg" alt="Logo comunidad Abejas Argentinas.">
+                                <img src="../public/comunidad1.webp" alt="Logo comunidad Abejas Argentinas.">
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" href="#">Comida y Salud</a>
-                                <img src="../public/comunidad2.jpeg" alt="Logo comunidad comida y salud.">
+                                <img src="../public/comunidad2.webp" alt="Logo comunidad comida y salud.">
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" href="#">Comunidad Nature</a>
-                                <img src="../public/comunidad3.jpeg" alt="Logo comunidad Nature.">
+                                <img src="../public/comunidad3.webp" alt="Logo comunidad Nature.">
                             </li>
                         </ul>
                     </div>
