--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -26,7 +26,7 @@
             <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
                 <div class="container">
                     <!-- Logo -->
-                    <a class="navbar-brand shake" href="../index.html" ><img id="logo" src="../public/logo-final2.png" alt="Logo empresa"></a>
+                    <a class="navbar-brand shake" href="../index.html" ><img id="logo" src="../public/logo-final.webp" alt="Logo empresa"></a>
                     <!-- Hamburguer Menu -->
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
