--- a/pages/productos.html
+++ b/pages/productos.html
@@ -26,7 +26,7 @@
             <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
                 <div class="container">
                     <!-- Logo -->
-                    <a class="navbar-brand shake" href="../index.html" ><img id="logo" src="../public/logo-final2.png" alt="Logo empresa"></a>
+                    <a class="navbar-brand shake" href="../index.html" ><img id="logo" src="../public/logo-final.webp" alt="Logo empresa"></a>
                     <!-- Hamburguer Menu -->
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -98,7 +98,7 @@
                     <div class="col">
                         <div class="card align-items-center">
                             <h5 class="card-title">Miel de Eucalipto</h5>
-                            <img class="card-img-top" src="../public/miel_eucaliptus.jpg" alt="Imagen de Miel de Eucalipto.">
+                            <img class="card-img-top" src="../public/miel_eucaliptus.webp" alt="Imagen de Miel de Eucalipto.">
                             <p>$99</p>
                             <a href="#" class="btn btn-primary">Agregar al carro</a>
                         </div>
@@ -106,7 +106,7 @@
                     <div class="col">
                         <div class="card align-items-center ">
                             <h5 class="card-title">Miel de Algarrobo</h5>
-                            <img class="card-img-top" src="../public/miel_algarrobo.jpg" alt="Imagen de miel de algarrobo.">
+                            <img class="card-img-top" src="../public/miel_algarrobo.webp" alt="Imagen de miel de algarrobo.">
                             <p>$99</p>
                             <a href="#" class="btn btn-primary">Agregar al carro</a>
                         </div>
@@ -114,7 +114,7 @@
                     <div class="col">
                         <div class="card align-items-center">
                             <h5 class="card-title">Miel de Citrus</h5>
-                            <img class="card-img-top" src="../public/miel_eucaliptus.jpg" alt="Imagen de miel de citrus.">
+                            <img class="card-img-top" src="../public/miel_eucaliptus.webp" alt="Imagen de miel de citrus.">
                             <p>$99</p>
                             <a href="#" class="btn btn-primary">Agregar al carro</a>
                         </div>
@@ -122,7 +122,7 @@
                     <div class="col">
                         <div class="card align-items-center">
                             <h5 class="card-title">Miel de Girasol</h5>
-                            <img class="card-img-top" src="../public/miel_algarrobo.jpg" alt="Imagen de miel de girasol.">
+                            <img class="card-img-top" src="../public/miel_algarrobo.webp" alt="Imagen de miel de girasol.">
                             <p>$99</p>
                             <a href="#" class="btn btn-primary">Agregar al carro</a>
                         </div>
@@ -130,7 +130,7 @@
                     <div class="col">
                         <div class="card align-items-center">
                             <h5 class="card-title">Polen de Abeja</h5>
-                            <img class="card-img-top" src="../public/polen.jpg" alt="Imagen de polen de abejas.">
+                            <img class="card-img-top" src="../public/polen.webp" alt="Imagen de polen de abejas.">
                             <p>$99</p>
                             <a href="#" class="btn btn-primary">Agregar al carro</a>
                         </div>
@@ -138,7 +138,7 @@
                     <div class="col">
                         <div class="card align-items-center">
                             <h5 class="card-title">Propoleo</h5>
-                            <img class="card-img-top" src="../public/propoleo.jpg" alt="Imagen de propoleo.">
+                            <img class="card-img-top" src="../public/propoleo.webp" alt="Imagen de propoleo.">
                             <p>$99</p>
                             <a href="#" class="btn btn-primary">Agregar al carro</a>
                         </div>
