--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Meta Description -->
     <meta name="description" content="Mieles Lupita: Somos una empresa oriunda de cordoba cuyo objetivo es brindarte la mejor calidad de bienes y servicios para tu emprendimiento apicola. Tambien ofrecemos la mayor variedad de miel de la region. Encontra en nuestro sitio toda la informacion que necesitas.">
     <!-- Favicon -->
-    <link rel="icon" href="public/favicon.ico">
+    <link rel="icon" href="public/favicon.png">
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
