--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- My CSS -->
     <link rel="stylesheet" href="css/main.css">
-    <title>Mieles Lupita - Inicio</title>
+    <title>Mieles Lupita - Todo lo que necesitas del mundo apicola</title>
 </head>
 <body>
     <div class="main-wrapper">
@@ -84,7 +84,7 @@
 
             <!-- Productos Destacados Seccion -->
             <section class="container destacados pt-3">
-                <h2>Productos Destacados</h2>
+                <h2 class="my-4">Productos Destacados</h2>
                 <div class="row g-3 row-cols-auto justify-content-center">
                     <div class="col">
                         <div class="card align-items-center">
@@ -116,7 +116,7 @@
             <!-- Newsletter-->
             <form class="newsletter container text-center" action="">
                 <div class="container-fluid d-flex flex-column align-items-center">
-                    <h3>Subscribete para recibir ofertas y novedades</h3>
+                    <h5 class="my-4">Subscribete para recibir ofertas y novedades</h5>
                     <div class="form-floating text-dark mb-4 d-flex flex-row">
                         <input type="email" class="form-control" placeholder="@">
                         <label for="floatingInput">Email</label>
@@ -128,7 +128,7 @@
 
             <!-- Clases apicultura -->
             <section class="tutorias">
-                <h3 class="text-center">Sumate a nuestros cursos de apicultura!</h3>
+                <h3 class="text-center mb-4">Sumate a nuestros cursos de apicultura!</h3>
                 <div class="ratio ratio-16x9">
                     <iframe src="https://www.youtube.com/embed/apCLQgCqeec" title="YouTube video" allowfullscreen></iframe>
                 </div>
@@ -155,7 +155,7 @@
             </section>
 
             <section class="testimonios mt-5 color-dark">
-                <h3 class="text-center">Testimonios</h3>
+                <h3 class="text-center mb-5">Testimonios</h3>
     
                 <div id="carouselTestimonios" class="carousel carousel-dark slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
